<resources>
    <string name="app_name">老年宝</string>
    <string name="title_activity_user_login">UserLoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="please_input_password">请输入密码</string>
    <string name="log_in">登录</string>
    <string name="forget_password">忘记密码</string>
    <string name="input_phone_number">请输入手机号码</string>
    <string name="register_account">注册账号</string>
    <string name="get_verfication">获取验证码</string>
    <string name="skip">跳过</string>
    <string name="hello_first_fragment">Hello first fragment</string>

    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="gender">性别</string>
    <string name="colon">：</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="address">住址</string>
    <string name="province">省</string>
    <string name="city">市</string>
    <string name="county">县</string>
    <string name="birthday">出生日期</string>
    <string name="taskrelease">任务发布</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
