<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.ForgetPasswordActivity">
<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    android:orientation="vertical"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    android:padding="10dp"-->
<!--    android:focusableInTouchMode="true"-->
<!--    android:focusable="true">-->

    <ScrollView
        android:layout_width="match_parent"

        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_margin="8dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="8dp">
                <EditText

                    android:id="@+id/username1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/editext_selector"
                    android:gravity="start|center"
                    android:hint="@string/input_phone_number"
                    android:importantForAutofill="no"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:textCursorDrawable="@drawable/text_cursorr"
                    android:textSize="17sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="8dp">
                <EditText
                    android:id="@+id/password1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/editext_selector"
                    android:gravity="start|center"
                    android:hint="@string/please_input_password"
                    android:importantForAutofill="no"
                    android:inputType="numberPassword"
                    android:maxLength="8"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:textCursorDrawable="@drawable/text_cursorr"
                    android:textSize="17sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="8dp">
                <Button
                    android:id="@+id/submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/log_in"
                    android:textSize="20sp"
                    android:textColor="@color/black"/>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/forget"
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="center"
                    android:text="@string/forget_password"
                    android:textSize="17sp"
                    style="?android:attr/buttonBarButtonStyle"/>

                <Button
                    android:id="@+id/enroll"
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="center"
                    android:text="@string/register_account"
                    android:textSize="17sp"
                    style="?android:attr/buttonBarButtonStyle"/>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>


<!--</LinearLayout>-->
</androidx.constraintlayout.widget.ConstraintLayout>