<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center"
                android:text="个人信息"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <TextView
                    android:id="@+id/hi_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="姓名："
                    android:textSize="20sp" />

                <EditText

                    android:id="@+id/username1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/editext_selector"
                    android:hint="请输入姓名"
                    android:importantForAutofill="no"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:textCursorDrawable="@drawable/text_cursorr"
                    android:textSize="17sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <TextView
                    android:id="@+id/age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="年龄："
                    android:textSize="20sp" />

                <EditText

                    android:id="@+id/agee"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/editext_selector"
                    android:hint="请输入年龄"
                    android:inputType="number"
                    android:importantForAutofill="no"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:textCursorDrawable="@drawable/text_cursorr"
                    android:textSize="17sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="8dp">

                <TextView
                    android:id="@+id/gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/colon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/colon"
                    android:textSize="20sp" />

                <RadioGroup
                    android:id="@+id/rg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/male"
                        android:textSize="20sp" />

                    <RadioButton
                        android:id="@+id/female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/female"
                        android:textSize="20sp" />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="8dp">

                <TextView
                    android:id="@+id/address"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/address"
                    android:textSize="20sp"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/colon2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/colon"
                    android:textSize="20sp" />

                <EditText

                    android:id="@+id/addresss"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/editext_selector"
                    android:hint="请输入详细住址"
                    android:importantForAutofill="no"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:textCursorDrawable="@drawable/text_cursorr"
                    android:textSize="17sp" />



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <TextView
                    android:id="@+id/phonenum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="电话号码："
                    android:textSize="20sp" />

                <EditText

                    android:id="@+id/input_phone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:inputType="phone"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/editext_selector"
                    android:hint="请输入电话号码"
                    android:importantForAutofill="no"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:textCursorDrawable="@drawable/text_cursorr"
                    android:textSize="17sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="8dp">

                <TextView
                    android:id="@+id/birthday"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="birthday："
                    android:textSize="20sp"
                    android:visibility="visible" />

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="none">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/birthdate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="1900年1月1日"
                            android:textSize="20sp" />
                    </LinearLayout>
                </HorizontalScrollView>



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/modify"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="提交信息"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>

<!--<HorizontalScrollView-->
<!--android:layout_width="match_parent"-->
<!--android:layout_height="match_parent"-->
<!--android:scrollbars="none">-->

<!--<LinearLayout-->
<!--    android:layout_width="wrap_content"-->
<!--    android:layout_height="match_parent"-->
<!--    android:paddingTop="5dp"-->
<!--    android:orientation="horizontal" >-->

<!--    <Spinner-->
<!--        android:id="@+id/province"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:spinnerMode="dialog" />-->

<!--    <Spinner-->
<!--        android:id="@+id/city"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:spinnerMode="dialog" />-->

<!--    <Spinner-->
<!--        android:id="@+id/county"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:spinnerMode="dialog" />-->
<!--</LinearLayout>-->
<!--</HorizontalScrollView>-->